[build-system]
requires = ["maturin>=1.0, <2.0"]
build-backend = "maturin"

[project]
name = "aes_ctr_rspy"
requires-python = ">=3.12"
version = "0.1.0"
classifiers = [
"Programming Language :: Rust", 
"Programming Language :: Python :: Implementation :: CPython",
"Programming Language :: Python :: 3.12"
]

[tool.maturin]
features = ["pyo3/extension-module"]
